# talkto

./: .gitignore  .lintstagedrc.json  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURE_PLAN.md  Makefile  README.md  alembic.ini  commitlint.config.js  docker-compose.yml  findings.md  opencode.json  package-lock.json  pnpm-lock.yaml  progress.md  pyproject.toml  resolve_conflicts.py  task_plan.md
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  protect-merge.yml
.opencode/plans/: colab-plan.md
backend/: mcp_server.py
backend/app/: config.py  db.py  main.py
cli/: main.py
data/: talkto.db-shm  talkto.db-wal
docs/: AGENT_USER_GUIDE.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
migrations/: env.py
migrations/versions/: 8a11911adf1d_initial_schema.py
prompts/: claude_global_rules.md  codex_global_rules.md  cursor_global_rules.mdc  feature_requests.md  master_prompt.md  opencode_global_rules.md  registration_rules.md
scripts/: cross-platform.cjs
server/: drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
tests/: conftest.py  test_agents_api.py  test_broadcaster.py  test_channels_api.py  test_e2e_flows.py  test_features_api.py  test_ghost_detection.py  test_invoker.py  test_mcp_integration.py  test_mcp_tools.py  test_messages_api.py  test_name_generator.py  test_prompt_engine.py  test_services.py  test_setup_wizard.py  test_users_api.py  test_websocket.py
(+507 files in other folders)
